<resources>
    <string name="app_name">Primal Fitness</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_first_name">First Name:</string>
    <string name="title_surname">Surname:</string>
    <string name="title_email_address">Email Address:</string>
    <string name="title_password">Password:</string>
    <string name="title_password_confirm">Confirm Password:</string>
    <string name="title_user_type">Profile Type:</string>
    <string name="title_submit">Submit</string>
    <string name="title_login">Sign In</string>
    <string name="title_Register">Register</string>
    <string name="title_username">Username:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_height">Height:</string>
    <string name="title_age">Age:</string>


    <string-array name="user_type_array">
        <item>Standard</item>
        <item>Coach</item>
        <item>Athlete</item>
    </string-array>

    <string-array name="plan_type_array_fitness">
        <item>Calisthetics</item>
        <item>Cardio</item>
        <item>Weights</item>
    </string-array>

    <string-array name="plan_type_array_nutrition">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

    <string name="title_activity_navigation">NavigationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_plans">PlansActivity</string>
    <string name="plans">Plans</string>
    <string name="messenger">Messenger</string>
    <string name="nutrition">Nutrition</string>
    <string name="fitness">Fitness</string>
    <string name="todo">TODO</string>
    <string name="title_activity_fitness2">FitnessActivity2</string>
    <string name="title_activity_mad_testing">MadTesting</string>
    <string name="title_activity_fitness_exercise">FitnessExerciseActivity</string>
    <string name="add_plan_to_your_schedule">Add Plan To Your Schedule</string>
    <string name="exercise">Exercise</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="rest_mm_ss">Rest (mm:ss)</string>
    <string name="submit">Submit</string>
    <string name="create_new_plan">Create New Plan</string>
    <string name="calisthetics">Calisthetics</string>
    <string name="cardio">Cardio</string>
    <string name="weights">Weights</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="fitness_tracking">Fitness Tracking</string>
    <string name="nutrition_tracking">Nutrition Tracking</string>
    <string name="messaging">Messaging</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="coaches_id">Coaches ID:</string>
    <string name="logo">Primal Fitness Logo</string>
    <string name="plan_type">Plan Type</string>
    <string name="create_plan">Create Plan</string>
    <string name="new_exercise">New exercise</string>
    <string name="plan_name">Plan Name</string>
    <string name="mark_plan_as_complete">Mark Plan as Complete</string>
    <string name="recipe_type">Recipe Type</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="title_activity_nutrition">NutritionActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item_to_diary">Add Item To Diary</string>

</resources>
