<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/home"
        android:textSize="30sp" />

    <Button
        android:id="@+id/fitnessTracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="97dp"
        android:layout_marginEnd="0dp"
        android:text="@string/fitness_tracking" />

    <Button
        android:id="@+id/nutritionTracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fitnessTracking"
        android:layout_alignParentStart="true"
        android:text="@string/nutrition_tracking" />

    <Button
        android:id="@+id/plans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/messages"
        android:layout_alignParentStart="true"
        android:text="@string/plans" />

    <Button
        android:id="@+id/messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/messaging" />

</RelativeLayout>