<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageButton
        android:id="@+id/plansImage"
        android:layout_width="0dp"
        android:layout_height="@android:dimen/thumbnail_height"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="316dp"
        android:background="@drawable/plans"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/messageImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nutritionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginStart="23dp"
        android:text="@string/nutrition"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/messageImage"
        app:layout_constraintStart_toStartOf="@+id/nutritionImage" />

    <ImageButton
        android:id="@+id/fitnessImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="11dp"
        android:background="@drawable/clipart41263"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/nutritionImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nutritionImage"
        app:layout_constraintTop_toTopOf="@+id/nutritionImage" />

    <TextView
        android:id="@+id/fitnessLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="17dp"
        android:text="@string/fitness"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/fitnessImage"
        app:layout_constraintTop_toBottomOf="@+id/fitnessImage" />

    <ImageButton
        android:id="@+id/nutritionImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/download"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/nutritionLabel"
        app:layout_constraintEnd_toStartOf="@+id/fitnessImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messagesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/messenger"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/messageImage"
        app:layout_constraintTop_toBottomOf="@+id/messageImage" />

    <ImageButton
        android:id="@+id/messageImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/messages"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/plansImage"
        app:layout_constraintEnd_toStartOf="@+id/plansImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/plansImage" />

    <TextView
        android:id="@+id/plansLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/plans"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/plansImage"
        app:layout_constraintStart_toStartOf="@+id/plansImage"
        app:layout_constraintTop_toBottomOf="@+id/plansImage" />
</android.support.constraint.ConstraintLayout>